[ca] update from Pootle (firefox)

--- a/ca/security/manager/chrome/pipnss/nsserrors.properties
+++ b/ca/security/manager/chrome/pipnss/nsserrors.properties
@@ -118,10 +118,22 @@ SSL_ERROR_RENEGOTIATION_NOT_ALLOWED=No es permet la renegociació en aquest sòc
 SSL_ERROR_UNSAFE_NEGOTIATION=L'altre extrem ha provat una conformitat de connexió d'estil antic (i, per tant, potencialment vulnerable).
 SSL_ERROR_RX_UNEXPECTED_UNCOMPRESSED_RECORD=L'SSL ha rebut un registre descomprimit inesperat.
 SSL_ERROR_WEAK_SERVER_EPHEMERAL_DH_KEY=L'SSL ha rebut una clau efímera Diffie-Hellman en el missatge de negociació d'intercanvi de claus del servidor.
-SSL_ERROR_NEXT_PROTOCOL_DATA_INVALID=L'SSL ha rebut una extensió NPN no vàlida.
-SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SSL2=Característica SSL no suportada per a connexions SSL 2.0.
-SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SERVERS=Característica SSL no suportada per a servidors
-SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_CLIENTS=Característica SSL no suportada per a clients.
+SSL_ERROR_NEXT_PROTOCOL_DATA_INVALID=L'SSL ha rebut dades d'extensió NPN no vàlides.
+SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SSL2=La característica SSL és incompatible per a connexions SSL 2.0.
+SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SERVERS=La característica SSL és incompatible per a servidors.
+SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_CLIENTS=La característica SSL és incompatible per a clients.
+SSL_ERROR_INVALID_VERSION_RANGE=L'interval de versions de SSL no és vàlid.
+SSL_ERROR_CIPHER_DISALLOWED_FOR_VERSION=L'altre extrem de la connexió SSL ha seleccionat un entorn de xifratge que no es permet en la versió del protocol seleccionada.
+SSL_ERROR_RX_MALFORMED_HELLO_VERIFY_REQUEST=L'SSL ha rebut un missatge de conformitat de connexió «Hello Verify Request» mal format.
+SSL_ERROR_RX_UNEXPECTED_HELLO_VERIFY_REQUEST=L'SSL ha rebut un missatge de conformitat de connexió «Hello Verify Request» inesperat.
+SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_VERSION=La característica SSL és incompatible per a la versió del protocol.
+SSL_ERROR_RX_UNEXPECTED_CERT_STATUS=L'SSL ha rebut un missatge de conformitat de connexió «Certificate Status» inesperat.
+SSL_ERROR_UNSUPPORTED_HASH_ALGORITHM=L'altre extrem de la connexió TLS ha utilitzat un algorisme de resum incompatible.
+SSL_ERROR_DIGEST_FAILURE=La funció de resum ha fallat.
+SSL_ERROR_INCORRECT_SIGNATURE_ALGORITHM=S'ha especificat un algorisme de signatura incorrecte en un element signat digitalment.
+SSL_ERROR_NEXT_PROTOCOL_NO_CALLBACK=L'extensió de negociació de següent protocol està activada, però s'ha esborrat la crida de retorn abans que fos necessària.
+SSL_ERROR_NEXT_PROTOCOL_NO_PROTOCOL=El servidor és no és compatible amb cap dels protocols que anuncia el client en l'extensió ALPN.
+SSL_ERROR_INAPPROPRIATE_FALLBACK_ALERT=El servidor ha rebutjat la conformitat de connexió perquè el client ha tornat a una versió de TLS inferior que el servidor no admet.
 SEC_ERROR_IO=S'ha produït un error I/O durant l'autorització de seguretat.
 SEC_ERROR_LIBRARY_FAILURE=ha fallat la biblioteca de seguretat.
 SEC_ERROR_BAD_DATA=biblioteca de seguretat: s'han rebut dades incorrectes.
