--- a/ca/dom/chrome/security/security.properties
+++ b/ca/dom/chrome/security/security.properties
@@ -16,3 +16,4 @@ InsecurePasswordsPresentOnIframe=Hi ha camps de contrasenya en un marc iframe in
 LoadingMixedActiveContent=S'està carregant contingut mixt actiu (insegur) en una pàgina segura «%1$S»
 LoadingMixedDisplayContent=S'està carregant contingut mixt visual (insegur) en una pàgina segura «%1$S»
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
+BothAllowScriptsAndSameOriginPresent=Un iframe que conté tant «allow-scripts» com «allow-same-origin» en l'atribut «sandbox» pot eliminar el seu entorn de proves.
