--- a/ja-JP-mac/browser/chrome/browser/devtools/webide.properties
+++ b/ja-JP-mac/browser/chrome/browser/devtools/webide.properties
@@ -22,6 +22,10 @@ importHostedApp_header				= マニフェスト URL を入力
 notification_showTroubleShooting_label		= トラブルシューティング
 notification_showTroubleShooting_accesskey	= t
 
+# LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
+# title for browser tab projects when the tab is still loading.
+project_tab_loading				= 読み込み中...
+
 # These messages appear in a notification box when an error occur.
 
 error_cantInstallNotFullyConnected		= プロジェクトをインストールできません。接続できません。
