--- a/ja-JP-mac/browser/chrome/browser/downloads/downloads.properties
+++ b/ja-JP-mac/browser/chrome/browser/downloads/downloads.properties
@@ -38,13 +38,40 @@ stateBlockedPolicy			= このゾーンのセキュリティ設定に従ってこ
 # Indicates that the download was blocked after scanning.
 stateDirty				= ブロックされました: ウイルスやスパイウェアを含んでいる恐れがあります
 
+# LOCALIZATION NOTE (blockedMalware, blockedPotentiallyUnwanted,
+#                    blockedUncommon):
+# These strings are shown in the panel for some types of blocked downloads, and
+# are immediately followed by the "Learn More" link, thus they must end with a
+# period.  You may need to adjust "downloadDetails.width" in "downloads.dtd" if
+# this turns out to be longer than the other existing status strings.
+# Note: These strings don't exist in the UI yet.  See bug 1053890.
+blockedMalware				= このファイルはウイルスやマルウェアが含まれています。
+blockedPotentiallyUnwanted		= このファイルはあなたのコンピュータに害を及ぼします。
+blockedUncommon				= このファイルを開くのは危険です。
+
+# LOCALIZATION NOTE (unblockHeader, unblockTypeMalware,
+#                    unblockTypePotentiallyUnwanted, unblockTypeUncommon,
+#                    unblockTip, unblockButtonContinue, unblockButtonCancel):
+# These strings are displayed in the dialog shown when the user asks a blocked
+# download to be unblocked.  The severity of the threat is expressed in
+# descending order by the unblockType strings, it is higher for files detected
+# as malware and lower for uncommon downloads.
+# Note: These strings don't exist in the UI yet.  See bug 1053890.
+unblockHeader				= このファイルのブロックを解除しますか？
+unblockTypeMalware			= このファイルにはウイルスやマルウェアが含まれており、あなたのコンピュータに害を及ぼします。
+unblockTypePotentiallyUnwanted		= このファイルはダウンローダに偽装しています。プログラムや設定が、予期せず変更される可能性があります。
+unblockTypeUncommon			= このファイルは、潜在的な危険のある不詳なサイトからダウンロードされました。開くのは危険です。
+unblockTip				= 代わりのダウンロード元を検索するか、後で再ダウンロードできます。
+unblockButtonContinue			= ブロックを解除
+unblockButtonCancel			= 解除しない
+
 # LOCALIZATION NOTE (sizeWithUnits):
 # %1$S is replaced with the size number, and %2$S with the measurement unit.
 sizeWithUnits				= %1$S %2$S
 sizeUnknown				= サイズ不明
 
 # LOCALIZATION NOTE (shortTimeLeftSeconds, shortTimeLeftMinutes,
-# shortTimeLeftHours, shortTimeLeftDays):
+#                    shortTimeLeftHours, shortTimeLeftDays):
 # These values are displayed in the downloads indicator in the main browser
 # window, where space is available for three characters maximum.  %1$S is
 # replaced with the time left for the given measurement unit.  Even for days,
