--- a/ja/browser/chrome/browser/browser.properties
+++ b/ja/browser/chrome/browser/browser.properties
@@ -105,13 +105,6 @@ popupShowPopupPrefix			= '%S' を表示
 badContentBlocked.blocked.message	= %S はこのページのコンテンツをブロックしています。
 badContentBlocked.notblocked.message	= %S はこのページのコンテンツをブロックしていません。
 
-# missing plugin installer
-installPlugin.message				= このページのメディアの表示に必要なプラグインをインストールしますか？
-installPlugin.button.label			= %S をインストール
-installPlugin.button.accesskey			= I
-installPlugin.ignoreButton.label		= 次回から確認しない
-installPlugin.ignoreButton.accesskey		= N
-
 crashedpluginsMessage.title			= %S プラグインがクラッシュしました。
 crashedpluginsMessage.reloadButton.label	= ページを再読み込み
 crashedpluginsMessage.reloadButton.accesskey	= R
@@ -570,13 +563,18 @@ getUserMedia.stopSharing.accesskey		= S
 
 getUserMedia.sharingMenu.label			= 共有デバイスタブ
 getUserMedia.sharingMenu.accesskey		= d
-# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
-#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
-#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
+#                    getUserMedia.sharingMenuMicrophone,
+#                    getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen,
+#                    getUserMedia.sharingMenuWindow,
 #                    getUserMedia.sharingMenuCameraMicrophone,
 #                    getUserMedia.sharingMenuCameraMicrophoneApplication,
 #                    getUserMedia.sharingMenuCameraMicrophoneScreen,
 #                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuCameraApplication,
+#                    getUserMedia.sharingMenuCameraScreen,
+#                    getUserMedia.sharingMenuCameraWindow,
 #                    getUserMedia.sharingMenuMicrophoneApplication,
 #                    getUserMedia.sharingMenuMicrophoneScreen,
 #                    getUserMedia.sharingMenuMicrophoneWindow):
@@ -590,6 +588,9 @@ getUserMedia.sharingMenuCameraMicrophone		= %S (カメラとマイク)
 getUserMedia.sharingMenuCameraMicrophoneApplication	= %S (カメラとマイク、アプリケーション)
 getUserMedia.sharingMenuCameraMicrophoneScreen		= %S (カメラとマイク、スクリーン)
 getUserMedia.sharingMenuCameraMicrophoneWindow		= %S (カメラとマイク、ウィンドウ)
+getUserMedia.sharingMenuCameraApplication		= %S (カメラとアプリケーション)
+getUserMedia.sharingMenuCameraScreen			= %S (カメラとスクリーン)
+getUserMedia.sharingMenuCameraWindow			= %S (カメラとウィンドウ)
 getUserMedia.sharingMenuMicrophoneApplication		= %S (マイクとアプリケーション)
 getUserMedia.sharingMenuMicrophoneScreen		= %S (マイクとスクリーン)
 getUserMedia.sharingMenuMicrophoneWindow		= %S (マイクとウィンドウ)
@@ -611,3 +612,12 @@ slowStartup.disableNotificationButton.accesskey		= A
 customizeTips.tip0					= %1$S: %2$S はメニューやツールバーの上のアイテムをドラッグするだけで、簡単にカスタマイズできます。%3$Sは %2$S をご覧ください。
 customizeTips.tip0.hint					= ヒント
 customizeTips.tip0.learnMore				= 詳細
+
+# LOCALIZATION NOTE(appmenu.*.description, appmenu.*.label): these are used for
+# the appmenu labels and buttons that appear when an update is staged for
+# installation or a background update has failed and a manual download is required.
+# %S is brandShortName
+appmenu.restartNeeded.description			= 更新を適用して %S を再起動
+appmenu.updateFailed.description			= バックグラウンドで更新できませんでした。更新をダウンロードしてください
+appmenu.restartBrowserButton.label			= %S を再起動
+appmenu.downloadUpdateButton.label			= 更新をダウンロード
