--- a/ja/browser/chrome/browser/loop/loop.properties
+++ b/ja/browser/chrome/browser/loop/loop.properties
@@ -4,7 +4,17 @@
 
 # Panel Strings
 
+## LOCALIZATION NOTE(clientShortname2): This should not be localized and
+## should remain "Firefox Hello" for all locales.
+clientShortname2			= Firefox Hello
+
+## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
+## replaced by the brand name
+first_time_experience_title		= {{clientShortname}} — 通話に参加しましょう
+first_time_experience_button_label	= 始める
+
 share_link_header_text			= リンクを共有して通話に招待:
+invite_header_text			= 通話に招待する。
 
 ## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
@@ -52,12 +62,14 @@ problem_accessing_account		= あなたのアカウントへのアクセスに問
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
 retry_button				= 再試行
 
-share_email_subject3=You have been invited to a conversation
-## LOCALIZATION NOTE (share_email_body3): In this item, don't translate the
+share_email_subject4			= {{clientShortname}} — 通話に参加しましょう
+## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
-share_email_body3			= 招待を受けるには、この URL のリンクをコピーまたはクリックして通話を開始してください:\r\n\r\n{{callUrl}}
+share_email_body4			= こんにちは！\r\n\r\n{{clientShortname}} でビデオ通話に参加しましょう。\r\n\r\nダウンロードやインストールは必要ありません。この URL をコピーしてブラウザに貼り付けるだけです。\r\n\r\n{{callUrl}}\r\n\r\n{{clientShortname}} の詳細については、{{learnMoreUrl}} をご覧ください。\r\n\r\nすぐ通話しましょう！
 share_button				= メール送信
+share_button2				= URL をメール送信
 copy_url_button				= コピー
+copy_url_button2			= URL をコピー
 copied_url_button			= コピー済み！
 
 panel_footer_signin_or_signup_link	= サインインまたはアカウント登録
@@ -85,6 +97,10 @@ new_contact_button			= 新しい連絡先
 ## and click the 'New Contact' button to see the fields.
 new_contact_name_placeholder		= 名前
 new_contact_email_placeholder		= メールアドレス
+new_contact_phone_placeholder		= Firefox OS Phone
+
+contacts_blocked_contacts		= ブロックされた連絡先
+
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
@@ -174,6 +190,7 @@ initiate_call_button_label2		= 通話の準備はよろしいですか？
 incoming_call_title2			= 着信
 incoming_call_accept_button		= 応答
 incoming_call_accept_audio_only_tooltip	= 音声で応答
+incoming_call_accept_audio_video_tooltip	= 映像で応答
 incoming_call_cancel_button		= キャンセル
 incoming_call_cancel_and_block_button	= キャンセルして着信拒否
 incoming_call_block_button		= 着信拒否
@@ -238,12 +255,17 @@ connection_error_see_console_notification	= 通話できませんでした。詳
 ## LOCALIZATION NOTE (legal_text_and_links3): In this item, don't translate the
 ## parts between {{..}} because these will be replaced with links with the labels
 ## from legal_text_tos and legal_text_privacy. clientShortname will be replaced
-## by the brand name, or fall back to client_shortname_fallback
+## by the brand name.
 legal_text_and_links3			= {{clientShortname}} を使うには、{{terms_of_use}} と {{privacy_notice}} に同意する必要があります。
 
 legal_text_tos				= 利用規約
 legal_text_privacy			= プライバシーポリシー
-client_shortname_fallback		= この機能
+
+## LOCALIZATION NOTE (powered_by_beforeLogo, powered_by_afterLogo):
+## These 2 strings are displayed before and after a 'Telefonica'
+## logo.
+powered_by_beforeLogo			= Powered by
+powered_by_afterLogo			=
 
 feedback_call_experience_heading2	= 通話品質はいかがでしたか？
 feedback_what_makes_you_sad		= ご不満な点はどこですか？
@@ -268,3 +290,30 @@ feedback_rejoin_button			= 再通話
 ## LOCALIZATION NOTE (feedback_report_user_button): Used to report a user in the case of
 ## an abusive user.
 feedback_report_user_button		= 問題のあるユーザを報告
+
+help_label				= ヘルプ
+tour_label				= ツアー
+
+## LOCALIZATION NOTE(rooms_default_room_name_template): {{conversationLabel}}
+## will be replaced by a number. For example "Conversation 1" or "Conversation 12".
+rooms_default_room_name_template	= 通話 {{conversationLabel}}
+rooms_leave_button_label		= 退出
+rooms_list_copy_url_tooltip		= URL をコピーします
+## LOCALIZATION NOTE (rooms_list_current_conversations):
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## We prefer to have no number in the string, but if you need it for your
+## language please use {{num}}.
+rooms_list_current_conversations		= 現在の通話
+rooms_list_delete_tooltip			= 通話を削除します
+rooms_list_deleteConfirmation_label		= よろしいですか？
+rooms_list_no_current_conversations		= 通話なし
+rooms_name_this_room_label			= 通話に名前を付ける
+rooms_new_room_button_label			= 通話を開始
+rooms_only_occupant_label			= あなたは最初の参加者です。
+rooms_panel_title				= 通話を選択するか、新しい通話を開始
+rooms_room_full_label				= この通話にはすでに 2 人参加しています
+rooms_room_full_call_to_action_nonFx_label	= {{brandShortname}} をダウンロードして通話を開始
+rooms_room_full_call_to_action_label		= {{clientShortname}} について >>
+rooms_room_joined_label				= 誰かが通話に参加しました！
+rooms_room_join_label				= 通話に参加
