--- a/ja/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/ja/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,8 +97,19 @@ quit-button.tooltiptext.linux2		= %1$S を終了します (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac		= %1$S を終了します (%2$S)
 
+loop-call-button2.label			= 通話を開始
+loop-call-button2.tooltiptext		= 通話を開始します
+
+social-share-button.label		= このページを共有
+social-share-button.tooltiptext		= このページを共有します
+
 panic-button.label			= 忘れる
 panic-button.tooltiptext		= 直前のブラウズ履歴を消去します
 
-loop-call-button.label			= 通話に招待
-loop-call-button.tooltiptext		= 通話に招待します
+web-apps-button.label			= アプリ
+web-apps-button.tooltiptext		= アプリを見つける
+
+# LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
+# widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
+devtools-webide-button.label		= WebIDE
+devtools-webide-button.tooltiptext	= WebIDE を開きます
