--- a/ja/browser/chrome/browser/places/places.properties
+++ b/ja/browser/chrome/browser/places/places.properties
@@ -77,16 +77,17 @@ OrganizerQueryDownloads		= ダウンロード
 OrganizerQueryAllBookmarks	= すべてのブックマーク
 OrganizerQueryTags		= タグ
 
-# LOCALIZATION NOTE (tagResultLabel) :
+# LOCALIZATION NOTE (tagResultLabel, bookmarkResultLabel, switchtabResultLabel,
+# keywordResultLabel, searchengineResultLabel)
 # Noun used to describe the location bar autocomplete result type
 # to users with screen readers
-# See createResultLabel() in urlbarBindings.xml 
+# See createResultLabel() in urlbarBindings.xml
 tagResultLabel			= タグ
-# LOCALIZATION NOTE (bookmarkResultLabel) :
-# Noun used to describe the location bar autocomplete result type
-# to users with screen readers
-# See createResultLabel() in urlbarBindings.xml 
 bookmarkResultLabel		= ブックマーク
+switchtabResultLabel		= タブ
+keywordResultLabel		= キーワード
+searchengineResultLabel		= 検索エンジン
+
 
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
