[ca] update from Pootle (firefox)

--- a/ca/browser/chrome/browser/devtools/webconsole.properties
+++ b/ca/browser/chrome/browser/devtools/webconsole.properties
@@ -39,7 +39,7 @@ webConsoleCmd.accesskey=W
 # %2$02S = minutes, %3$02S = seconds, %4$03S = milliseconds.
 timestampFormat=%02S:%02S:%02S.%03S
 
-helperFuncUnsupportedTypeError=No es pot cridar el pprint en aquest tipus d'objecte.
+helperFuncUnsupportedTypeError=No es pot cridar pprint en aquest tipus d'objecte.
 NetworkPanel.label=Inspecciona les sol·licituds a la xarxa
 
 # LOCALIZATION NOTE (NetworkPanel.deltaDurationMS): this string is used to
