--- a/ca/browser/chrome/browser/browser.properties
+++ b/ca/browser/chrome/browser/browser.properties
@@ -55,16 +55,16 @@ addonInstallRestartButton.accesskey=R
 addonError-1=No s'ha pogut baixar el complement perquè el #2 ha tingut un problema de connexió.
 addonError-2=No s'ha pogut instal·lar el complement de #2 perquè no coincideix amb el complement que esperava el #3.
 addonError-3=No s'ha pogut instal·lar el complement baixat de #2 perquè sembla que era defectuós.
-addonError-4=No s'ha pogut instal·lar #1 perquè el #3 no podia modificar el fitxer necessari.
+addonError-4=No s'ha pogut instal·lar el complement «#1» perquè el #3 no ha pogut modificar el fitxer necessari.
 
 # LOCALIZATION NOTE (addonLocalError-1, addonLocalError-2, addonLocalError-3, addonLocalError-4, addonErrorIncompatible, addonErrorBlocklisted):
 # #1 is the add-on name, #3 is the application name, #4 is the application version
 addonLocalError-1=No s'ha pogut instal·lar el complement per un error del sistema de fitxers.
 addonLocalError-2=No es pot instal·lar el complement perquè no coincideix amb allò que esperava el complement #3.
 addonLocalError-3=No es pot instal·lar el complement perquè sembla estar malmès.
-addonLocalError-4=No es pot instal·lar #1 perquè #3 no pot modificar el fitxer necessari.
-addonErrorIncompatible=No s'ha pogut instal·lar #1 perquè no és compatible amb el #3 #4.
-addonErrorBlocklisted=No s'ha pogut instal·lar #1 perquè hi ha un gran risc que pugui comportar problemes d'estabilitat o de seguretat.
+addonLocalError-4=No s'ha pogut instal·lar el complement «#1» perquè el #3 no ha pogut modificar el fitxer necessari.
+addonErrorIncompatible=No s'ha pogut instal·lar el complement «#1» perquè no és compatible amb el #3 #4.
+addonErrorBlocklisted=No s'ha pogut instal·lar el complement «#1» perquè té un risc elevat de provocar problemes d'estabilitat o de seguretat.
 
 # LOCALIZATION NOTE (lwthemeInstallRequest.message): %S will be replaced with
 # the host name of the site.
