--- a/ca/browser/chrome/browser/devtools/app-manager.properties
+++ b/ca/browser/chrome/browser/devtools/app-manager.properties
@@ -40,5 +40,5 @@ validator.nonAbsoluteLaunchPath=El camí d'execució ha de ser un camí absolut 
 validator.accessFailedLaunchPath=No es pot accedir al document d'inici de l'aplicació «%S»
 # LOCALIZATION NOTE (validator.accessFailedLaunchPathBadHttpCode): %1$S is the URI of
 # the launch document, %2$S is the http error code.
-validator.accessFailedLaunchPathBadHttpCode=No es pot accedir al document d'inici de l'aplicació «'%1$S»; s'ha rebut el codi HTTP %2$S
+validator.accessFailedLaunchPathBadHttpCode=No es pot accedir al document d'inici de l'aplicació «%1$S»; s'ha rebut el codi HTTP %2$S
 
