[ca] update from Pootle (mobile)

--- a/ca/mobile/android/chrome/browser.properties
+++ b/ca/mobile/android/chrome/browser.properties
@@ -41,19 +41,19 @@ downloadCancelPromptMessage=Esteu segur que voleu cancel·lar-la?
 
 # LOCALIZATION NOTE (addonError-1, addonError-2, addonError-3, addonError-4):
 # #1 is the add-on name, #2 is the add-on host, #3 is the application name
-addonError-1=No s'ha pogut descarregar l'extensió perquè ha fallat la connexió amb #2.
-addonError-2=No s'ha pogut instal·lar l'extensió des de #2 perquè no coincideix amb #3.
-addonError-3=No s'ha pogut instal·lar l'extensió des de #2; el fitxer està malmès.
-addonError-4=No s'ha pogut instal·lar #1 perquè #3 no pot modificar els fitxers necessaris.
+addonError-1=No s'ha pogut baixar el complement perquè ha fallat la connexió amb #2.
+addonError-2=No s'ha pogut instal·lar el complement des de #2 perquè no coincideix amb el complement #3 que s'esperava.
+addonError-3=No s'ha pogut instal·lar el complement baixat des de #2 perquè el fitxer està malmès.
+addonError-4=No s'ha pogut instal·lar el complement «#1» perquè el #3 no ha pogut modificar el fitxer necessari.
 
 # LOCALIZATION NOTE (addonLocalError-1, addonLocalError-2, addonLocalError-3, addonLocalError-4, addonErrorIncompatible, addonErrorBlocklisted):
 # #1 is the add-on name, #3 is the application name, #4 is the application version
 addonLocalError-1=Aquest complement no es pot instal·lar perquè podria deixar el sistema inestable.
 addonLocalError-2=Aquest complement no es pot instal·lar perquè no coincideix amb #3.
 addonLocalError-3=No s'ha pogut instal·lar el complement; el fitxer està malmès.
-addonLocalError-4=No s'ha pogut instal·lar #1 perquè #3 no pot modificar els fitxers necessaris.
-addonErrorIncompatible=No s'ha pogut instal·lar #1 perquè no és compatible amb #3 #4.
-addonErrorBlocklisted=Aquest complement no es pot instal·lar pel risc a deixar el sistema inestable o exposat a problemes de seguretat.
+addonLocalError-4=No s'ha pogut instal·lar el complement «#1» perquè el #3 no ha pogut modificar el fitxer necessari.
+addonErrorIncompatible=No s'ha pogut instal·lar el complement «#1» perquè no és compatible amb el #3 #4.
+addonErrorBlocklisted=No s'ha pogut instal·lar el complement «#1» perquè té un risc elevat de provocar problemes d'estabilitat o de seguretat.
 
 # Notifications
 notificationRestart.normal=Reinicieu per completar els canvis.
