[ca] update from Pootle (firefox)

--- a/ca/browser/installer/nsisstrings.properties
+++ b/ca/browser/installer/nsisstrings.properties
@@ -50,7 +50,7 @@ ONE_MOMENT_INSTALL=Un moment, el $BrandShortName s'iniciarà tan aviat com hagi 
 ONE_MOMENT_UPGRADE=Un moment, el $BrandShortName s'iniciarà tan aviat com hagi acabat l'actualització…
 INSTALL_MAINT_SERVICE=&Instal·la el servei d'actualització en segon pla del $BrandShortName
 SEND_PING=&Envia informació d'aquesta instal·lació a Mozilla
-BROWSE_BUTTON=&Navega...
+BROWSE_BUTTON=&Navega…
 DEST_FOLDER=Carpeta de destinació
 
 DOWNLOADING_LABEL=S'està baixant el $BrandShortName…
