--- a/ca/dom/chrome/appstrings.properties
+++ b/ca/dom/chrome/appstrings.properties
@@ -9,7 +9,7 @@ unknownProtocolFound=Un dels protocols següents (%S) no està registrat o no es
 connectionFailure=S'ha rebutjat la connexió en intentar contactar amb %S.
 netInterrupt=La connexió a %S ha estat interrompuda de manera inesperada. Potser s'han transferit algunes dades.\u0020
 netTimeout=L'operació ha esgotat el temps disponible en intentar contactar amb %S.
-redirectLoop=S'ha excedit el límit de redireccionament per a aquest URL. No es pot carregar la pàgina sol·licitada. Pot ser degut a galetes blocades.
+redirectLoop=S'ha excedit el límit de redireccionament per a aquest URL. No es pot carregar la pàgina sol·licitada. La causa pot ser que hi hagi galetes blocades.
 confirmRepostPrompt=Per mostrar la pàgina, l'aplicació ha d'enviar informació que repetirà qualsevol acció (com ara una cerca o una confirmació de tramesa) que s'hagués fet abans.
 resendButton.label=Torna a enviar
 unknownSocketType=Aquest document no es pot visualitzar si no instal·leu el gestor de seguretat de personal (PSM; Personal Security Manager). Baixeu i instal·leu una altra vegada el PSM, o contacteu amb el vostre administrador del sistema.\u0020
