[ca] update from Pootle (firefox)

--- a/ca/dom/chrome/layout/css.properties
+++ b/ca/dom/chrome/layout/css.properties
@@ -142,7 +142,7 @@ PEFFVGenericInFamilyList=La llista de famílies no pot contenir noms genèrics d
 PEFFVValueDefinitionTrailing=S'esperava un final de la definició del valor, però s'ha trobat «%1$S».
 PEBadDirValue=S'esperava «ltr» o «rtl» en el selector de direcció, però s'ha trobat «%1$S».
 PESupportsConditionStartEOF2=«not», «(», o funció
-PESupportsConditionInParensEOF=«(»
+PESupportsConditionInParensEOF=«)»
 PESupportsConditionNotEOF=«not»
 PESupportsWhitespaceRequired=S'esperava un espai en blanc després de «not», «and» o «or»
 PESupportsConditionExpectedOpenParenOrFunction=S'esperava «)» o una funció durant l'anàlisi de la condició @supports, però s'ha trobat «%1$S».
