--- a/ca/dom/chrome/layout/MediaDocument.properties
+++ b/ca/dom/chrome/layout/MediaDocument.properties
@@ -8,7 +8,7 @@
 #LOCALIZATION NOTE (ImageTitleWithNeitherDimensionsNorFile): first %S is type
 #LOCALIZATION NOTE (MediaTitleWithFile): first %S is filename, second %S is type
 #LOCALIZATION NOTE (MediaTitleWithNoInfo): first %S is type
-ImageTitleWithDimensions2AndFile=%S (Imatge %S, %Sx%S píxels)
+ImageTitleWithDimensions2AndFile=%S (Imatge %S, %S × %S píxels)
 ImageTitleWithoutDimensions=%S (Imatge %S)
 ImageTitleWithDimensions2=(Imatge %S, %Sx%S píxels)
 ImageTitleWithNeitherDimensionsNorFile=(Imatge %S)
