[ca] update from Pootle (firefox)

--- a/ca/dom/chrome/dom/dom.properties
+++ b/ca/dom/chrome/dom/dom.properties
@@ -10,7 +10,7 @@ StopScriptButton=Atura l'script
 DebugScriptButton=Depura l'script
 WaitForScriptButton=Continua
 DontAskAgain=No m'ho tornis a &demanar
-JSURLLoadBlockedWarning=S'ha produït un intent de carregar un javascript: l'URL d'un\nordinador central en una finestra que mostra el\ncontingut d'un altre, ha estat blocat\npel gestor de seguretat.
+JSURLLoadBlockedWarning=S'ha produït un intent de carregar un javascript: l'URL d'un\nordinador central en una finestra que mostra el contingut\nd'un altre, ha estat blocat pel gestor de seguretat.
 WindowCloseBlockedWarning=Els scripts no poden tancar finestres que no han obert.
 OnBeforeUnloadTitle=N'esteu segur?
 OnBeforeUnloadMessage=Aquesta pàgina us demana que confirmeu que voleu sortir-ne. Les dades que heu introduït no es desaran.
