--- a/ca/dom/chrome/layout/css.properties
+++ b/ca/dom/chrome/layout/css.properties
@@ -49,7 +49,7 @@ PESelectorGroupExtraCombinator=Combinador penjant.
 PECounterStyleNotIdent=S'esperava un identificador per al nom de la regla @counter-style.
 PECounterStyleBadName=El nom de la regla @counter-style no pot ser «%1$S».
 PECounterStyleBadBlockStart=S'esperava «{» per començar la regla @counter-style, però s'ha trobat «%1$S».
-PECounterStyleEOF=«{» de tancament del bloc @counter-style
+PECounterStyleEOF=«}» de tancament del bloc @counter-style
 PECounterDescExpected=S'esperava un descriptor de comptador, però s'ha trobat «%1$S».
 PEUnknownCounterDesc=El descriptor «%1$S» és desconegut a la regla @counter-style.
 PECounterExtendsNotIdent=S'esperava un identificador per al sistema extends, però s'ha trobat «%1$S».
@@ -145,7 +145,7 @@ PESupportsConditionStartEOF2=«not», «(», o funció
 PESupportsConditionInParensEOF=«)»
 PESupportsConditionNotEOF=«not»
 PESupportsWhitespaceRequired=S'esperava un espai en blanc després de «not», «and» o «or»
-PESupportsConditionExpectedOpenParenOrFunction=S'esperava «)» o una funció durant l'anàlisi de la condició @supports, però s'ha trobat «%1$S».
+PESupportsConditionExpectedOpenParenOrFunction=S'esperava «(» o una funció durant l'anàlisi de la condició supports, però s'ha trobat «%1$S».
 PESupportsConditionExpectedCloseParen=S'esperava «)» durant l'anàlisi de la condició @supports, però s'ha trobat «%1$S».
 PESupportsConditionExpectedStart2=S'esperava «not», «(» o una funció durant l'anàlisi de la condició @supports, però s'ha trobat «%1$S».
 PESupportsConditionExpectedNot=S'esperava «not» durant l'anàlisi de la condició @supports, però s'ha trobat «%1$S».
