--- a/ca/dom/chrome/layout/htmlparser.properties
+++ b/ca/dom/chrome/layout/htmlparser.properties
@@ -89,8 +89,8 @@ errUnclosedElements=S'ha trobat l'etiqueta final “%1$S”, però encara hi hav
 errUnclosedElementsImplied=S'ha afegit l'etiqueta final “%1$S” implícitament, però encara hi havia altres elements oberts.
 errUnclosedElementsCell=S'ha tancat implícitament una cel·la de taula, però encara hi havia altres elements oberts.
 errStrayDoctype=Falta el doctype.
-errAlmostStandardsDoctype=S'ha seleccionat un tipus doctype gairebé estàndard. Però s'esperava “<!DOCTYPE html>”.
-errQuirkyDoctype=S'ha seleccionat un doctype no estàndard (Quirk). Però s'esperava “<!DOCTYPE html>”.
+errAlmostStandardsDoctype=El doctype és de mode gairebé estàndard. S'esperava «<!DOCTYPE html>».
+errQuirkyDoctype=El doctype no és estàndard. S'esperava «<!DOCTYPE html>».
 errNonSpaceInTrailer=Hi ha un caràcter diferent d'espai al peu de pàgina.
 errNonSpaceAfterFrameset=Hi ha un caràcter diferent d'espai després del “frameset”.
 errNonSpaceInFrameset=Hi ha un caràcter diferent dins el “frameset”.
