--- a/ca/security/manager/chrome/pipnss/pipnss.properties
+++ b/ca/security/manager/chrome/pipnss/pipnss.properties
@@ -259,7 +259,7 @@ VerifiedTrue=cert
 VerifiedFalse=fals
 PK11BadPassword=La contrasenya no és correcta.
 SuccessfulP12Backup=Els vostres certificats de seguretat i claus privades s'han desat amb èxit.
-SuccessfulP12Restore=Els vostres certificats de seguretat i claus privades s'han recuperat amb èxit.
+SuccessfulP12Restore=Els vostres certificats de seguretat i claus privades s'han restaurat amb èxit.
 PKCS12PasswordInvalid=No s'ha pogut descodificar el fitxer PKCS #12. Potser heu introduït una contrasenya incorrecta?
 PKCS12DecodeErr=No s'ha pogut descodificar el fitxer. Pot ser que no estigui en format PKCS #12, que estigui malmès, o que la contrasenya que heu introduït sigui incorrecta.
 PKCS12UnknownErrRestore=No s'ha pogut restaurar el fitxer PKCS #12 per raons desconegudes.
