--- a/ca/toolkit/chrome/global/charsetMenu.properties
+++ b/ca/toolkit/chrome/global/charsetMenu.properties
@@ -32,8 +32,8 @@ charsetMenuCharsets = Codificació de caràcters
 charsetMenuAutodet = Detecta automàticament
 # 'A' is reserved for Arabic:
 charsetMenuAutodet.key = D
-charsetMenuAutodet.off = Desactivat
-charsetMenuAutodet.off.key = o
+charsetMenuAutodet.off = (desactivat)
+charsetMenuAutodet.off.key = d
 charsetMenuAutodet.ja = Japonès
 charsetMenuAutodet.ja.key = J
 charsetMenuAutodet.ru = Rus
