--- a/ca/toolkit/crashreporter/crashreporter.ini
+++ b/ca/toolkit/crashreporter/crashreporter.ini
@@ -21,7 +21,7 @@ CrashReporterDescriptionText2=El %s ha tingut un problema i ha fallat.\n\nPer aj
 CrashReporterDefault=S'executa aquesta aplicació després d'una fallada per informar del problema al proveïdor de l'aplicació. No hauria d'executar-se directament.
 Details=Detalls…
 ViewReportTitle=Contingut de l'informe
-CommentGrayText=Afegiu-hi un comentari. Nota: Els comentaris són visibles públicament
+CommentGrayText=Afegiu-hi un comentari (els comentaris són visibles públicament)
 ExtraReportInfo=L'informe conté també informació tècnica de l'estat de l'aplicació quan va fallar.
 ; LOCALIZATION NOTE (CheckSendReport): The %s is replaced with the vendor name.
 CheckSendReport=Comunica la fallada a %s per intentar solucionar-la
