[browser][dom][security] Latest strings for FF36

--- a/fr/dom/chrome/dom/dom.properties
+++ b/fr/dom/chrome/dom/dom.properties
@@ -205,3 +205,5 @@ KeyNameZoomWarning=La valeur « Zoom » de KeyboardEvent.key est obsolète et 
 KeyNameDeadKeysWarning=Les valeurs de KeyboardEvent.key commençant par « Dead » sont obsolètes et seront fusionnées sous la forme unique « Dead ». Consulter https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key pour plus d'informations.
 ImportXULIntoContentWarning=L'importation de nœuds XUL dans le contenu d'un document est obsolète. Cette fonctionnalité pourrait être bientôt retirée.
 XMLDocumentLoadPrincipalMismatch=L'utilisation de document.load est interdite sur les documents provenant d'autres fenêtres. Seule la fenêtre dans laquelle le document a été créé est autorisée à appeler .load sur ce document. Utilisez de préférence XMLHttpRequest à la place.
+# LOCALIZATION NOTE: Do not translate "IndexedDB".
+IndexedDBTransactionAbortNavigation=Une transaction IndexedDB incomplète a été annulée en raison de la navigation vers une autre page.
