--- a/fr/browser/chrome/browser/devtools/timeline.properties
+++ b/fr/browser/chrome/browser/devtools/timeline.properties
@@ -38,6 +38,7 @@ timeline.records=ENREGISTREMENTS
 timeline.label.styles=Styles
 timeline.label.reflow=Reflow
 timeline.label.paint=Paint
+timeline.label.javascript=Javascript
 timeline.label.domevent=Évènement DOM
 timeline.label.consoleTime=Console
 
