--- a/fr/webapprt/webapprt/overrides/appstrings.properties
+++ b/fr/webapprt/webapprt/overrides/appstrings.properties
@@ -30,6 +30,6 @@ externalProtocolChkMsg=Se souvenir de ce choix pour tous les liens de ce type.
 externalProtocolLaunchBtn=Lancer l'application
 malwareBlocked=Le site situé à %S a été signalé comme une source d'attaques et a été bloqué suivant vos préférences de sécurité.
 phishingBlocked=Le site web sur %S a été signalé comme étant une contrefaçon conçue pour piéger les utilisateurs pour qu'ils partagent des informations personnelles ou financières.
-cspFrameAncestorBlocked=Cette application a essayé d'accéder à une ressource qui possède une stratégie de sécurité de contenu qui l'empêche d'être intégrée de cette façon.
+cspBlocked=Cette application a essayé d'accéder à une ressource qui possède une stratégie de sécurité de contenu qui l'empêche d'être chargée de cette façon.
 corruptedContentError=L'application s'est arrêtée car une erreur dans la transmission de données a été détectée.
 remoteXUL=Cette application utilise une ancienne technologie qui n'est plus disponible.
