[pt-BR] update from Pootle (firefox)

--- a/pt-BR/browser/chrome/browser/devtools/timeline.properties
+++ b/pt-BR/browser/chrome/browser/devtools/timeline.properties
@@ -17,6 +17,7 @@ timeline.label=Linha temporal
 
 # LOCALIZATION NOTE (timeline.panelLabel):
 # This is used as the label for the toolbox panel.
+timeline.panelLabel=Painel da linha do tempo
 
 # LOCALIZATION NOTE (timeline.tooltip):
 # This string is displayed in the tooltip of the tab when the timeline is
@@ -29,6 +30,7 @@ timeline.tick=%S ms
 
 # LOCALIZATION NOTE (timeline.records):
 # This string is displayed in the timeline waterfall, as a title for the menu.
+timeline.records=RECORDS
 
 # LOCALIZATION NOTE (timeline.label.*):
 # These strings are displayed in the timeline waterfall, identifying markers.
