--- a/pt-BR/browser/chrome/browser/loop/loop.properties
+++ b/pt-BR/browser/chrome/browser/loop/loop.properties
@@ -6,6 +6,7 @@
 
 ## LOCALIZATION NOTE(clientShortname2): This should not be localized and
 ## should remain "Firefox Hello" for all locales.
+clientShortname2=Firefox Hello
 
 ## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
 ## replaced by the brand name
@@ -91,6 +92,7 @@ new_contact_button=Novo contato
 ## and click the 'New Contact' button to see the fields.
 new_contact_name_placeholder=Nome
 new_contact_email_placeholder=Email
+new_contact_phone_placeholder=Telefone Firefox OS
 
 
 ## LOCALIZATION NOTE (add_contact_button):
@@ -294,5 +296,9 @@ rooms_list_copy_url_tooltip=Copiar link
 ## language please use {{num}}.
 rooms_list_delete_tooltip=Excluir conversa
 rooms_list_deleteConfirmation_label=Tem certeza?
+rooms_only_occupant_label=Você é o primeiro aqui.
 rooms_panel_title=Escolha uma conversa ou comece uma nova
 rooms_room_full_label=Já há duas pessoas nesta conversa.
+rooms_room_full_call_to_action_nonFx_label=Baixe o {{brandShortname}} para iniciar o seu próprio
+rooms_room_full_call_to_action_label=Saiba mais sobre o {{clientShortname}} »
+rooms_room_joined_label=Alguém entrou na conversa!
